--- a/Amigdale.html
+++ b/Amigdale.html
@@ -144,10 +144,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -164,7 +165,7 @@
                 Amigdalele perfecte care funcționa ca o barieră imunologică eficientă, captând și neutralizând agenții patogeni care intră prin gură și nas. Ar fi rezistente la infecții și inflamații, prevenind amigdalita și alte afecțiuni ale gâtului. În plus, ar colabora armonios cu restul sistemului imunitar, contribuind la apărarea generală a organismului.
             </p>
             <div class="product-price">
-                <span>Preț:</span> 37.000 RON
+                <span>Preț:</span> 37.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs1', name: 'Amigdale', price: 37000 })">Cumpără</button> 
        </div>
