--- a/Creier.html
+++ b/Creier.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Un creier perfect cu o rețea neuronală optimizată, capabilă să proceseze informația rapid și eficient, fără pierderi de memorie sau erori. Menține un echilibru ideal între rațiune și emoție, permițând luarea celor mai bune decizii și adaptarea rapidă la orice situație. În plus, ar fi protejat de orice afecțiune neurodegenerativă, funcționând impecabil de-a lungul întregii vieți.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 1.660.000 RON
+                <span>Preț:</span> 1.660.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs3', name: 'Creier', price: 1660000 })">Cumpără</button>
 
