--- a/DespreNoi.html
+++ b/DespreNoi.html
@@ -5,114 +5,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Despre Noi - DPL Autopsii & Organe vii</title>
     <style>
-        body{
+        body {
             width: 100%;
             height: 100vh;
-            background-color: rgb(114, 16, 16);
+            background: linear-gradient(135deg, #540d0d, #220303);
             color: #fff;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             overflow-x: hidden;
-            overflow: hidden;
-
         }
 
-        nav{
-            background-color: rgba(255, 0, 0, 0.718);
-            padding: 15px;
-            margin: 5px 10px;
-            text-align: center;
-            height: 50px;
+        nav {
+            background-color: rgba(255, 0, 0, 0.8);
+            padding: 15px 20px;
             display: flex;
+            justify-content: space-between;
             align-items: center;
             position: sticky;
-            top:5px;
+            top: 0;
+            z-index: 99;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
         }
 
-        .Navbar_Link{
+        .Navbar_Link {
             display: flex;
-            justify-content: end;
-            width: 100%;
-            gap: 50px;
+            gap: 30px;
         }
 
-        .Navbar_Link a{
-            color: #000;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        }
-        .Navbar_Link a:hover{
-            color: #ffbcbc;
+        .Navbar_Link a {
+            color: #fff;
+            font-weight: bold;
             text-decoration: none;
-            transition: 0.3s;
+            transition: color 0.3s, transform 0.3s;
+        }
+
+        .Navbar_Link a:hover {
+            color: #ffbcbc;
+            transform: scale(1.1);
+        }
+
+        .logo img {
+            width: 50px;
+            height: 50px;
+            transition: transform 0.3s;
+        }
+
+        .logo img:hover {
             transform: scale(1.2);
         }
 
-        logoanimation img{
-            transition: transform 0.4s;
-        }
-
-        logoanimation img:hover{
-            transform: scale(1.2);
-        }
-
-        h2{
-            color: antiquewhite;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        .content {
+            max-width: 800px;
+            margin: 30px auto;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.8);
+            border-radius: 15px;
+            box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
             text-align: center;
         }
 
-        .content{
-            padding: 20px;
-            margin: 20px;
-            background-color: rgba(0, 0, 0, 0.8);
-            border-radius: 10px;
-        }
-
-        .about-text{
+        .about-text {
             font-size: 1.1em;
             line-height: 1.6;
         }
 
-        .about-images{
+        .about-images {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             gap: 20px;
             margin-top: 20px;
         }
 
-        .about-images img{
-            height: 130px;
+        .about-images img {
+            height: 150px;
             border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 6px rgba(255, 0, 0, 0.3);
         }
 
         footer {
             text-align: center;
             background-color: #000;
             color: #fff;
-            padding: 10px;
-            position: relative;
-            margin-top: 100px;
+            padding: 15px;
+            margin-top: 50px;
             width: 100%;
+            font-size: 14px;
         }
-
     </style>
 </head>
 <body>
 
 <nav>
-    <logoanimation>
-        <a href="http://127.0.0.1:5500/index.html">
-            <img src="https://cdn-icons-png.flaticon.com/128/84/84390.png" width="60" height="60px" />
+    <div class="logo">
+        <a href="index.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/84/84390.png" alt="Logo" />
         </a>
-    </logoanimation>
+    </div>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="Produse.html"><i>Produse</i></a>
-        <a href="Locatie.html"><i>Locatie</i></a>
-        <a href="DespreNoi.html"><i>Despre Noi</i></a>
-        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Produse.html">Produse</a>
+        <a href="Locatie.html">Locatie</a>
+        <a href="DespreNoi.html">Despre Noi</a>
+        <a href="Contact.html">Contact</a>
+        <a href="Cos.html">Coș</a>
     </div>
 </nav>
 
@@ -132,9 +128,8 @@
     </div>
 
     <div class="about-images">
-        <img src="./WhatsApp Image 2025-03-21 at 16.51.58.jpeg" height="130px">
-        <img src="./WhatsApp Image 2025-03-21 at 16.49.33.jpeg" height="130px">
-
+        <img src="./WhatsApp Image 2025-03-21 at 16.51.58.jpeg" alt="Despre Noi Imagine 1">
+        <img src="./WhatsApp Image 2025-03-21 at 16.49.33.jpeg" alt="Despre Noi Imagine 2">
     </div>
 </div>
 
