--- a/Glanda Tiroida.html
+++ b/Glanda Tiroida.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 O glanda tiroidă perfectă care produce hormoni tiroidieni în cantități precise, menținând metabolismul echilibrat și energia constantă. Regleaza temperatura corpului, procesele de creștere și dezvoltare, și sprijina funcțiile cardiovasculare și neurologice. În plus, ar fi complet protejată de orice disfuncție sau afecțiune autoimună, asigurând o funcționare continuă și sănătoasă.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 25.900 RON
+                <span>Preț:</span> 25.900 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs9', name: 'Glanda Tiroida', price: 25900 })">Cumpără</button>
         </div>
