--- a/Locatie.html
+++ b/Locatie.html
@@ -98,6 +98,7 @@
         <a href="Locatie.html"><i>Locatie</i></a>
         <a href="DespreNoi.html"><i>Despre Noi</i></a>
         <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
