--- a/Ochi Stang.html
+++ b/Ochi Stang.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Un ochi perfect care percepe fiecare detaliu cu o claritate impecabilă, având o acuitate vizuală excelentă pe distanțe mari și mici. Ar fi complet protejat de orice infecții, degenerare sau afecțiuni, având o funcționare continuă și fără dureri. În plus, ar avea o adaptabilitate rapidă la schimbările de lumină, asigurând o vedere clară în orice condiții.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 340.000 RON
+                <span>Preț:</span> 340.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs16', name: 'Ochi Stang', price: 340000 })">Cumpără</button>
 
