--- a/Pancreas.html
+++ b/Pancreas.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Un pancreas perfect care produce enzime digestive în cantități ideale, ajutând la descompunerea eficientă a alimentelor. Ar regla nivelurile de insulină și glucagon, menținând glicemia în limitele optime și prevenind diabetul. În plus, ar fi complet protejat de orice inflamație sau afecțiune, contribuind la sănătatea generală a sistemului digestiv și metabolic.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 5.700 RON
+                <span>Preț:</span> 5.700 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs17', name: 'Pancreas', price: 5700 })">Cumpără</button>
 
