--- a/Penis.html
+++ b/Penis.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Un penis perfect care funcționeaza optim în cadrul funcțiilor sexuale, având o erecție fermă și constantă, menținând o circulație sanguină sănătoasă. Complet protejat de infecții, leziuni sau afecțiuni, având o igienă optimă și o sensibilitate adecvată pentru plăcere. În plus, ar contribui la sănătatea reproductivă, facilitând un act sexual sănătos și eficient.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 10.000.000 RON
+                <span>Preț:</span> 10.000.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs18', name: 'Penis', price: 10000000 })">Cumpără</button>
 
