--- a/Testicule.html
+++ b/Testicule.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Testiculele perfecte care produce spermă sănătoasă și suficientă, asigurând fertilitatea și sănătatea reproductivă pe termen lung. Secreta testosteron în cantități adecvate, menținând echilibrul hormonal și sprijinind dezvoltarea și funcțiile masculine. În plus, ar fi complet protejate de orice afecțiune, asigurând o funcționare continuă și eficientă.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 260.000 ROM
+                <span>Preț:</span> 260.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs24', name: 'Testicule', price: 260000 })">Cumpără</button>
 
