--- a/Vezica Biliara.html
+++ b/Vezica Biliara.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 O vezică biliară perfectă care stoceaza și elibereaza bila în cantitățile exacte necesare pentru o digestie eficientă a grăsimilor. Ar funcționa fără blocaje sau inflamații, prevenind formarea pietrelor biliare și a altor afecțiuni. În plus, s-ar coordona perfect cu ficatul și intestinul subțire, contribuind la un proces digestiv optim.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 82.000 RON
+                <span>Preț:</span> 82.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs27', name: 'Vezica Biliara', price: 82000 })">Cumpără</button>
 
