--- a/Apendice.html
+++ b/Apendice.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Un apendice perfect care ar sprijini sistemul imunitar, găzduind bacterii benefice esențiale pentru sănătatea intestinală. Ar funcționa fără inflamații sau blocaje, prevenind apendicita și alte complicații. În plus, ar contribui la echilibrul microbiomului intestinal, susținând digestia și protecția împotriva infecțiilor.
             </p>
             <div class="product-price">
-                <span>Preț:</span> 50.000 RON
+                <span>Preț:</span> 50.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs2', name: 'Apendice', price: 50000 })">Cumpără</button>
         </div>
