--- a/Cos.html
+++ b/Cos.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,71 +8,57 @@
         body {
             width: 100%;
             height: 100vh;
-            background-color: rgb(114, 16, 16);
+            background: linear-gradient(135deg, #540d0d, #220303);
             color: #fff;
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             overflow-x: hidden;
         }
 
         nav {
-            background-color: rgba(255, 0, 0, 0.718);
-            padding: 15px;
-            margin: 5px 10px;
-            text-align: center;
-            height: 50px;
+            background-color: rgba(255, 0, 0, 0.8);
+            padding: 15px 20px;
             display: flex;
+            justify-content: space-between;
             align-items: center;
             position: sticky;
-            top: 5px;
+            top: 0;
             z-index: 99;
-            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
         }
 
         .Navbar_Link {
             display: flex;
-            justify-content: end;
-            width: 100%;
-            gap: 50px;
+            gap: 30px;
         }
 
         .Navbar_Link a {
-            color: #000;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            color: #fff;
+            font-weight: bold;
+            text-decoration: none;
+            transition: color 0.3s, transform 0.3s;
         }
 
         .Navbar_Link a:hover {
             color: #ffbcbc;
-            text-decoration: none;
-            transition: 0.3s;
-            transform: scale(1.2);
+            transform: scale(1.1);
         }
 
         h1 {
             text-align: center;
-            color: antiquewhite;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            color: #ffdddd;
+            font-size: 2.5rem;
+            margin-top: 20px;
         }
 
         .content {
+            max-width: 800px;
+            margin: 30px auto;
             padding: 20px;
-            margin: 20px;
-            background-color: rgba(0, 0, 0, 0.8);
-            border-radius: 10px;
-            text-align: center;
-        }
-        logoanimation img {
-            transition: transform 0.4s;
-        }
-
-        logoanimation img:hover {
-            transform: scale(1.2);
-        }
-
-        h2 {
-            color: antiquewhite;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            background: rgba(0, 0, 0, 0.8);
+            border-radius: 15px;
+            box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
             text-align: center;
         }
 
@@ -83,68 +68,70 @@
         }
 
         #cart-items li {
-            background: #333;
-            padding: 10px;
-            margin: 5px;
-            border-radius: 5px;
+            background: #222;
+            padding: 12px;
+            margin: 8px 0;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(255, 0, 0, 0.3);
         }
 
         button {
-            background-color: red;
+            background: #ff0000;
             color: white;
-            padding: 10px 20px;
+            padding: 12px 24px;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
             font-size: 16px;
+            font-weight: bold;
+            transition: 0.3s ease;
+            box-shadow: 0 4px 8px rgba(255, 0, 0, 0.4);
         }
 
         button:hover {
-            background-color: darkred;
+            background: #cc0000;
+            transform: translateY(-2px);
         }
 
         footer {
             text-align: center;
             background-color: #000;
             color: #fff;
-            padding: 10px;
+            padding: 15px;
             position: relative;
-            margin-top: 150px;
+            margin-top: 50px;
             width: 100%;
+            font-size: 14px;
         }
     </style>
 </head>
-
 <body>
     <nav>
-      <logoanimation>
-        <a href="http://127.0.0.1:5500/index.html">
-            <img src="https://cdn-icons-png.flaticon.com/128/84/84390.png" width="60" height="60px" />
+        <a href="index.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/84/84390.png" width="50" height="50" />
         </a>
-    </logoanimation>
-        <h2><i>DPL Autopsii & Organe vii</i></h2>
+        <h2>DPL Autopsii & Organe vii</h2>
         <div class="Navbar_Link">
-            <a href="Produse.html"><i>Produse</i></a>
-            <a href="Locatie.html"><i>Locatie</i></a>
-            <a href="DespreNoi.html"><i>Despre Noi</i></a>
-            <a href="Contact.html"><i>Contact</i></a>
+            <a href="Produse.html">Produse</a>
+            <a href="Locatie.html">Locatie</a>
+            <a href="DespreNoi.html">Despre Noi</a>
+            <a href="Contact.html">Contact</a>
+            <a href="Cos.html">Coș</a>
         </div>
     </nav>
 
     <div class="content">
-        <a href="produs1.html" style="color: #ffbcbc; font-weight: bold;">Produs 1</a>
         <h1>Coș</h1>
         <ul id="cart-items"></ul>
         <p id="cart-total">Total: 0 RON</p>
         <div id="paypal-button-container"></div>
     </div>
-    <script style="justify-content: center;" src="https://www.paypal.com/sdk/js?client-id=AcjpWVc3sDK9_5vXl4fAMqi96qDbUKtPyeDBS8CY62r6LFKcgaXzrwGE_xQNmPegx4ilhSFWadVvK4oI&enable-funding=venmo&currency=EUR" data-sdk-integration-source="button-factory"></script>
 
+    <script src="https://www.paypal.com/sdk/js?client-id=AcjpWVc3sDK9_5vXl4fAMqi96qDbUKtPyeDBS8CY62r6LFKcgaXzrwGE_xQNmPegx4ilhSFWadVvK4oI&enable-funding=venmo&currency=EUR" data-sdk-integration-source="button-factory"></script>
     <script src="script.js"></script>
 
     <footer>
         <p>&copy; 2025 DPL Autopsii & Organe vii | Toate drepturile rezervate</p>
     </footer>
 </body>
-
 </html>
