--- a/Diafragma.html
+++ b/Diafragma.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 O diafragmă perfectă ar funcționa fără efort, asigurând o respirație profundă și eficientă prin contracții ritmice și puternice. Ar menține un echilibru optim între presiunea toracică și abdominală, facilitând atât respirația, cât și funcționarea corectă a organelor interne. În plus, ar fi lipsită de slăbiciuni sau spasme, prevenind probleme precum dificultățile respiratorii sau hernia diafragmatică.
             </p>
             <div class="product-price">
-                <span>Preț:</span> 81.000 RON
+                <span>Preț:</span> 81.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs4', name: 'Diafragma', price: 81000 })">Cumpără</button>
 
