--- a/Esofag.html
+++ b/Esofag.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Un esofag perfect care transporta alimentele și lichidele rapid și eficient către stomac, fără disconfort sau reflux. Ar avea o mucoasă sănătoasă, protejată de iritații, inflamații sau leziuni cauzate de acidul gastric. În plus, ar funcționa armonios cu restul sistemului digestiv, asigurând un proces de înghițire fără dificultăți.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 120.000 RON
+                <span>Preț:</span> 120.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs5', name: 'Esofag', price: 120000 })">Cumpără</button>
 
