--- a/Ficat.html
+++ b/Ficat.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Un ficat perfect ce metabolizeaza eficient toate substanțele, detoxifiind organismul fără efort și menținând un echilibru chimic optim. Regenereaza rapid orice mică deteriorare, asigurând o funcționare continuă și fără probleme pe tot parcursul vieții. În plus, ar regla perfect nivelul de nutrienți din sânge, susținând energia și sănătatea întregului corp.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 150.000 RON
+                <span>Preț:</span> 150.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs6', name: 'Ficat', price: 150000 })">Cumpără</button>
 
