--- a/Ganglioni Limfattici.html
+++ b/Ganglioni Limfattici.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Ganglionii limfatici perfecți care filtreaza eficient limfa, eliminând toxinele, agenții patogeni și celulele anormale din organism. Ar produce și activa limfocite, menținând un sistem imunitar puternic și capabil să reacționeze rapid la infecții. În plus, ar rămâne sănătoși și fără inflamații, prevenind umflăturile și alte disfuncții ale sistemului limfatic.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 70.000 RON
+                <span>Preț:</span> 70.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs7', name: 'Ganglioni Limfatici', price: 70000 })">Cumpără</button>
 
