--- a/Glanda Proststica.html
+++ b/Glanda Proststica.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 O glandă prostatică perfectă ar produce un secret care susține sănătatea spermei și facilitează o funcție sexuală normală. Ar fi complet protejată de inflamații, infecții sau afecțiuni precum adenomul prostatic, menținându-se sănătoasă pe tot parcursul vieții. În plus, ar regenera orice disfuncție rapid, asigurând o performanță continuă și fără disconfort.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 240.000 RON
+                <span>Preț:</span> 240.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs8', name: 'Glanda Prostatica', price: 240000 })">Cumpără</button>
 
