--- a/Glandele Suprarenale.html
+++ b/Glandele Suprarenale.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Glandele suprarenale perfecte care produc hormoni esențiali, precum cortizolul și adrenalina, menținând un echilibru optim al stresului și metabolismului. Ar regla tensiunea arterială, nivelul de energie și răspunsul imun fără disfuncții sau dereglări hormonale. În plus, ar funcționa armonios pe tot parcursul vieții, prevenind afecțiuni precum oboseala suprarenală sau insuficiența endocrină.
             </p>
             <div class="product-price">
-                <span>Preț:</span> 109.000 RON
+                <span>Preț:</span> 109.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs10', name: 'Glandele Suprarenale, price: 109000 })">Cumpără</button>
 
