--- a/Intestin Subtire.html
+++ b/Intestin Subtire.html
@@ -143,10 +143,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -163,7 +164,7 @@
                 Un intestin subțire perfect care absorbe toți nutrienții esențiali cu o eficiență maximă, asigurând energie și sănătate întregului organism. Are o mucoasă intestinală intactă, fără inflamații sau dezechilibre, prevenind orice problemă digestivă. În plus, menține un echilibru ideal al microbiomului, susținând imunitatea și buna funcționare a sistemului digestiv.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 125.000 RON
+                <span>Preț:</span> 125.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs11', name: 'Intestin Subtire', price: 125000 })">Cumpără</button>
 
