--- a/Limba.html
+++ b/Limba.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 O limbă perfectă ar facilita gustul cu o sensibilitate ideală, detectând toate aromele cu precizie și intensitate. Ar ajuta la masticația eficientă și la formarea alimentelor într-un bulion adecvat pentru înghițire, prevenind orice dificultăți digestive. În plus, ar menține un echilibru sănătos al bacteriilor, contribuind la igiena orală și la sănătatea generală a gurii.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 320.000
+                <span>Preț:</span> 320.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs12', name: 'Limba', price: 320000 })">Cumpără</button>
 
