--- a/Maduva Osoasa.html
+++ b/Maduva Osoasa.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 O măduvă osoasă perfectă care produce celule sanguine în cantități ideale, menținând un sistem imunitar puternic și o circulație sănătoasă. Ar regenera constant globulele roșii, albe și trombocitele, prevenind anemia, infecțiile și tulburările de coagulare. În plus, ar funcționa fără mutații sau afecțiuni, asigurând o sănătate optimă pe tot parcursul vieții.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 9.000 RON / 100g
+                <span>Preț:</span> 9.000 EUR / 100g
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs13', name: 'Maduva Osoasa', price: 9000 })">Cumpără</button>
 
