--- a/Nas.html
+++ b/Nas.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Un nas perfect ar respira aerul eficient, filtrând și purificând fiecare inhalare, protejând organismul de alergeni și particule dăunătoare. Ar detecta mirosurile cu o acuitate olfactivă excelentă, contribuind la gustul și percepția mediului înconjurător. În plus, ar menține o umiditate optimă a aerului, prevenind uscarea căilor nazale și favorizând o respirație sănătoasă.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 200.000 RON
+                <span>Preț:</span> 200.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs14', name: 'Nas', price: 200000 })">Cumpără</button>
 
