--- a/Piele.html
+++ b/Piele.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Piele perfectă care protejeaza corpul de agenții externi, oferind o barieră eficientă împotriva infecțiilor, deshidratării și radiațiilor ultraviolete. Ar regenera rapid orice deteriorare, menținându-se netedă și fără imperfecțiuni pe tot parcursul vieții. În plus, ar regla temperatura corpului, asigurând confort și protecție în orice condiții de mediu.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 1.800 RON / 100g
+                <span>Preț:</span> 1.800 EUR / 100g
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs19', name: 'Piele', price: 1800 })">Cumpără</button>
 
