--- a/Plamani.html
+++ b/Plamani.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Plămânii au o capacitate maximă de oxigenare, asigurând un schimb gazos eficient pentru a furniza oxigen fiecărei celule din corp. Complet liberi de toxine, inflamații sau boli, au o elasticitate optimă pentru respirație fără efort. În plus, funcționeaza armonios cu inima, menținând un ritm respirator echilibrat indiferent de activitate.
             </p>
             <div class="product-price">
-                <span>Preț:</span> 480.000 RON
+                <span>Preț:</span> 480.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs20', name: 'Plamani', price: 480000 })">Cumpără</button>
 
