--- a/Produse.html
+++ b/Produse.html
@@ -8,7 +8,7 @@
         body {
             width: 100%;
             height: 100vh;
-            background-color: rgb(114, 16, 16);
+            background: linear-gradient(135deg, #540d0d, #220303);
             color: #fff;
             font-family: Arial, sans-serif;
             margin: 0;
@@ -17,56 +17,48 @@
         }
 
         nav {
-            background-color: rgba(255, 0, 0, 0.718);
-            padding: 15px;
-            margin: 5px 10px;
-            text-align: center;
-            height: 50px;
+            background-color: rgba(255, 0, 0, 0.8);
+            padding: 15px 20px;
             display: flex;
+            justify-content: space-between;
             align-items: center;
             position: sticky;
-            top: 5px;
+            top: 0;
             z-index: 99;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
         }
 
         .Navbar_Link {
             display: flex;
-            justify-content: end;
-            width: 100%;
-            gap: 50px;
+            gap: 30px;
         }
 
         .Navbar_Link a {
-            color: #000;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            color: #fff;
+            font-weight: bold;
+            text-decoration: none;
+            transition: color 0.3s, transform 0.3s;
         }
 
         .Navbar_Link a:hover {
             color: #ffbcbc;
-            text-decoration: none;
-            transition: 0.3s;
-            transform: scale(1.2);
-        }
-
-        logoanimation img {
-            transition: transform 0.4s;
-        }
-
-        logoanimation img:hover {
-            transform: scale(1.2);
+            transform: scale(1.1);
         }
 
         h2 {
-            color: antiquewhite;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             text-align: center;
+            color: antiquewhite;
+            font-size: 2rem;
         }
 
         .content {
+            max-width: 800px;
+            margin: 30px auto;
             padding: 20px;
-            margin: 20px;
-            background-color: rgba(0, 0, 0, 0.8);
-            border-radius: 10px;
+            background: rgba(0, 0, 0, 0.8);
+            border-radius: 15px;
+            box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
+            text-align: center;
         }
 
         .product-grid {
@@ -94,7 +86,6 @@
 
         .product-card h3 {
             color: #ffbcbc;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             margin: 10px 0;
         }
 
@@ -112,29 +103,29 @@
             text-align: center;
             background-color: #000;
             color: #fff;
-            padding: 10px;
+            padding: 15px;
             position: relative;
-            bottom: 0;
+            margin-top: 50px;
             width: 100%;
+            font-size: 14px;
         }
     </style>
 </head>
 <body>
-
-<nav>
-    <logoanimation>
-        <a href="http://127.0.0.1:5500/index.html">
-            <img src="https://cdn-icons-png.flaticon.com/128/84/84390.png" width="60" height="60px" />
+    <nav>
+        <a href="index.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/84/84390.png" width="50" height="50" />
         </a>
-    </logoanimation>
-    <h2><i>DPL Autopsii & Organe vii</i></h2>
-    <div class="Navbar_Link">
-        <a href="Produse.html"><i>Produse</i></a>
-        <a href="Locatie.html"><i>Locatie</i></a>
-        <a href="DespreNoi.html"><i>Despre Noi</i></a>
-        <a href="Contact.html"><i>Contact</i></a>
-    </div>
-</nav>
+        <h2>DPL Autopsii & Organe vii</h2>
+        <div class="Navbar_Link">
+            <a href="Produse.html">Produse</a>
+            <a href="Locatie.html">Locatie</a>
+            <a href="DespreNoi.html">Despre Noi</a>
+            <a href="Contact.html">Contact</a>
+            <a href="Cos.html">Coș</a>
+        </div>
+    </nav>
+
 
 <div class="content">
     <h2>Produse</h2>
