--- a/Rinichi Drept.html
+++ b/Rinichi Drept.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Un rinichi perfect care filtreaza sângele fără efort, eliminând toxinele și menținând un echilibru optim de apă și electroliți în organism. Funcționeaza continuu, reglând tensiunea arterială și producția de hormoni esențiali pentru sănătatea generală. În plus, are o capacitate excelentă de regenerare, prevenind orice deteriorare sau acumulare de substanțe nocive.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 53.000 RON
+                <span>Preț:</span> 53.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs21', name: 'Rinichi Drept', price: 53000 })">Cumpără</button>
 
