--- a/Stomac.html
+++ b/Stomac.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Un stomac perfect ce digeră alimentele eficient, extrăgând nutrienții esențiali fără disconfort sau probleme digestive. Are un echilibru ideal de acizi și enzime, prevenind iritațiile și afecțiunile precum refluxul gastric. În plus, comunica perfect cu restul sistemului digestiv, asigurând o tranzitare optimă a alimentelor și menținând sănătatea generală a organismului.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 320.000 RON
+                <span>Preț:</span> 320.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs23', name: 'Stomac', price: 320000 })">Cumpără</button>
 
