--- a/Timus.html
+++ b/Timus.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 Un timus perfect care ar contribui la dezvoltarea și maturizarea celulelor T, esențiale pentru un sistem imunitar puternic. Ar funcționa optim în copilărie și adolescență, asigurând o apărare eficientă împotriva infecțiilor și bolilor. În plus, s-ar atrofia natural la vârsta adultă fără a compromite imunitatea generală a organismului.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 27.000 RON
+                <span>Preț:</span> 27.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs25', name: 'Timus', price: 27000 })">Cumpără</button>
 
