--- a/Urechi.html
+++ b/Urechi.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -161,7 +162,7 @@
             <p>
                 Urechile perfecte detecteaza sunetele cu o sensibilitate maximă, de la cele mai joase până la cele mai înalte frecvențe. Ar proteja structurile interne de orice daună sau infecție, menținând o auzire clară și fără tulburări. În plus, ar permite o localizare precisă a sunetelor, contribuind la orientarea și echilibrul corporal.            </p>
             <div class="product-price">
-                <span>Preț:</span> 88.887 RON
+                <span>Preț:</span> 88.887 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs26', name: 'Urechi', price: 88887 })">Cumpără</button>
 
