--- a/Vezica Urinara.html
+++ b/Vezica Urinara.html
@@ -142,10 +142,11 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
+        <a href="Cos.html"><i>Coș</i></a>
     </div>
 </nav>
 
@@ -162,7 +163,7 @@
                 O vezică urinară perfectă care stoceaza și elimină urina eficient, fără disconfort sau pierderi involuntare. Ar avea pereți elastici și puternici, permițând umplerea și golirea completă fără probleme. În plus, ar fi protejată de infecții și inflamații, menținând sănătatea tractului urinar.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 66.000 RON
+                <span>Preț:</span> 66.000 EUR
             </div>
             <button class="buton" onclick="onclick=addToCart({ id: 'produs28', name: 'Vezica Biliara', price: 66000 })">Cumpără</button>
 
