--- a/index.html
+++ b/index.html
@@ -8,84 +8,83 @@
         body {
             width: 100%;
             height: 100vh;
-            background-color: rgb(114, 16, 16);
-            overflow-x: hidden;
+            background: linear-gradient(135deg, #540d0d, #220303);
+            color: #fff;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
-            color: white;
+            overflow-x: hidden;
         }
-        
+
         nav {
-            background-color: rgba(255, 0, 0, 0.718);
-            padding: 15px;
-            margin: 5px 10px;
-            text-align: center;
-            height: 50px;
+            background-color: rgba(255, 0, 0, 0.8);
+            padding: 15px 20px;
             display: flex;
+            justify-content: space-between;
             align-items: center;
             position: sticky;
-            top: 5px;
-            z-index: 1000;
+            top: 0;
+            z-index: 99;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
         }
 
         .Navbar_Link {
             display: flex;
-            justify-content: end;
-            width: 100%;
-            gap: 50px;
+            gap: 30px;
         }
 
         .Navbar_Link a {
-            color: #000;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            color: #fff;
+            font-weight: bold;
             text-decoration: none;
+            transition: color 0.3s, transform 0.3s;
         }
 
         .Navbar_Link a:hover {
             color: #ffbcbc;
-            transition: 0.3s;
-            transform: scale(1.2);
+            transform: scale(1.1);
         }
 
-        .logo img {
-            transition: transform 0.4s;
-        }
-
-        .logo img:hover {
-            transform: scale(1.2);
+        h1, h2 {
+            text-align: center;
+            color: #ffdddd;
         }
 
         .container {
+            max-width: 800px;
+            margin: 30px auto;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.8);
+            border-radius: 15px;
+            box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
             text-align: center;
-            padding: 40px;
         }
 
         .container img {
             width: 80%;
             max-width: 600px;
-            border-radius: 10px;
-            margin-top: 20px;
+            border-radius: 12px;
+            margin: 20px 0;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
         }
 
         .description {
             font-size: 18px;
-            margin-top: 20px;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
+            line-height: 1.6;
+            font-style: italic;
         }
 
         .team {
             display: flex;
             justify-content: center;
-            gap: 100px;
-            margin-top: 40px;
+            flex-wrap: wrap;
+            gap: 40px;
             padding-bottom: 40px;
         }
 
         .team-member {
             text-align: center;
+            max-width: 200px;
         }
 
         .team-member img {
@@ -93,63 +92,53 @@
             height: 150px;
             border-radius: 50%;
             object-fit: cover;
+            transition: transform 0.3s;
         }
 
-        .team-member p {
-            margin-top: 10px;
-            font-size: 16px;
-            color: antiquewhite;
+        .team-member img:hover {
+            transform: scale(1.1);
         }
-        footer{
+
+        footer {
             text-align: center;
             background-color: #000;
             color: #fff;
-            padding: 10px;
-            position: relative;
-            bottom: 0;
-            width: 100%;
+            padding: 15px;
+            font-size: 14px;
+            margin-top: 50px;
         }
     </style>
 </head>
 <body>
     <nav>
-        <div class="logo">
-            <a href="index.html">
-                <img src="https://cdn-icons-png.flaticon.com/128/84/84390.png" width="60" height="60px" />
-            </a>
-        </div>
-        <h2 style="width: 100%; text-align: center; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: antiquewhite;"><i>DPL Autopsii & Organe vii</i></h2>
+        <a href="index.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/84/84390.png" width="50" height="50" />
+        </a>
+        <h2>DPL Autopsii & Organe vii</h2>
         <div class="Navbar_Link">
-            <a href="Produse.html"><i>Produse</i></a>
-            <a href="Locatie.html"><i>Locație</i></a>
-            <a href="DespreNoi.html"><i>Despre Noi</i></a>
-            <a href="Contact.html"><i>Contact</i></a>
+            <a href="Produse.html">Produse</a>
+            <a href="Locatie.html">Locatie</a>
+            <a href="DespreNoi.html">Despre Noi</a>
+            <a href="Contact.html">Contact</a>
+            <a href="Cos.html">Coș</a>
         </div>
     </nav>
 
     <div class="container">
         <h1>Bine ați venit la DPL Autopsii & Organe vii</h1>
-        <img src="./WhatsApp Image 2025-03-19 at 21.56.41.jpeg">
-        <p  style="font-family: fantasy; color: antiquewhite;" class="description">
-            Suntem dedicați oferirii celor mai bune servicii în domeniul nostru. 
-            Descoperiți gama noastră de produse și aflați mai multe despre activitatea noastră.
-        </p>
-        <p style="font-family: fantasy;" class="description">
-            Toate produsele noastre vin de la un donator dedicat numit Luca Di Pietro, un tânăr din Timișoara a cărui plăcere este salvarea vieții altora.
-        </p>
-        <img src="./WhatsApp Image 2025-03-19 at 22.15.08.jpeg">
-        <p style="font-family: fantasy;" class="description">
-            Cu o echipă de profesioniști și tehnologii de ultimă generație, 
-            vă garantăm servicii de calitate și profesionalism.
-        </p>
+        <img src="./WhatsApp Image 2025-03-19 at 21.56.41.jpeg" alt="Company Overview">
+        <p class="description">Suntem dedicați oferirii celor mai bune servicii în domeniul nostru.</p>
+        <p class="description">Toate produsele noastre vin de la un donator dedicat numit Luca Di Pietro.</p>
+        <img src="./WhatsApp Image 2025-03-19 at 22.15.08.jpeg" alt="Technology">
+        <p class="description">Cu o echipă de profesioniști și tehnologii de ultimă generație, garantăm servicii de calitate.</p>
     </div>
 
     <div class="container">
-        <h2>Echipa noastră principala</h2>
+        <h2>Echipa noastră principală</h2>
         <div class="team">
             <div class="team-member">
                 <img src="./man-silhouette-icon-question-mark-260nw-192704537.webp" alt="Membru echipă 1">
-                <p>Anonim - Fundatorul DPL Autopsii & Organe vii </p>
+                <p>Anonim - Fundatorul DPL Autopsii & Organe vii</p>
             </div>
             <div class="team-member">
                 <img src="./WhatsApp Image 2025-03-19 at 22.25.03.jpeg" alt="Membru echipă 2">
@@ -157,10 +146,11 @@
             </div>
             <div class="team-member">
                 <img src="./WhatsApp Image 2025-03-19 at 22.25.48.jpeg" alt="Membru echipă 3">
-                <p>Tudorescu Robert- Agent de vânzări </p>
+                <p>Tudorescu Robert - Agent de vânzări</p>
             </div>
         </div>
     </div>
+
     <footer>
         <p>&copy; 2025 DPL Autopsii & Organe vii | Toate drepturile rezervate</p>
     </footer>
