--- a/Contact.html
+++ b/Contact.html
@@ -110,7 +110,7 @@
     <p>Completează formularul de mai jos și te vom contacta cât mai curând posibil.</p>
 
     <form class="contact-form" action="#" method="POST">
-        <input type="text" name="name" placeholder="Numele tău" required>
+        <input type="name" name="name" placeholder="Numele tău" required>
         <input type="email" name="email" placeholder="Emailul tău" required>
         <textarea name="message" rows="5" placeholder="Mesajul tău" required></textarea>
         <input type="submit" value="Trimite mesajul">
