--- a/Ochi Stang.html
+++ b/Ochi Stang.html
@@ -160,12 +160,12 @@
         <div class="product-info">
             <h3>Descriere</h3>
             <p>
-                Un ochi perfect care percepe fiecare detaliu cu o claritate impecabilă, având o acuitate vizuală excelentă pe distanțe mari și mici. Ar fi complet protejat de orice infecții, degenerare sau afecțiuni, având o funcționare continuă și fără dureri. În plus, ar avea o adaptabilitate rapidă la schimbările de lumină, asigurând o vedere clară în orice condiții.            
+                Un ochi slab, cu miopie -5, vede obiectele îndepărtate încețoșat, deoarece lumina se focalizează înaintea retinei în loc să ajungă direct pe aceasta. Daltonismul afectează percepția culorilor, astfel încât persoana poate confunda nuanțele de roșu și verde sau alte combinații, în funcție de tipul exact de daltonism. În plus, acest ochi ar avea dificultăți atât în distingerea detaliilor fine la distanță, cât și în recunoașterea corectă a anumitor culori, ceea ce i-ar putea influența viața de zi cu zi.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 340.000 EUR
+                <span>Preț:</span> 1.700 EUR
             </div>
-            <button class="buton" onclick="onclick=addToCart({ id: 'produs16', name: 'Ochi Stang', price: 340000 })">Cumpără</button>
+            <button class="buton" onclick="onclick=addToCart({ id: 'produs16', name: 'Ochi Stang', price: 1700 })">Cumpără</button>
 
         </div>
     </div>
