--- a/Timus.html
+++ b/Timus.html
@@ -155,7 +155,7 @@
     
     <div class="product-detail">
         <div class="product-image">
-            <img src="https://www.ucl.ac.uk/immunity-transplantation/sites/immunity_transplantation/files/1675-human-thymus.jpg">
+            <img src="./WhatsApp Image 2025-04-03 at 21.31.55.jpeg">
         </div>
         <div class="product-info">
             <h3>Descriere</h3>
